feat: implement purchase management functionality with PurchaseController, PurchaseService, and PurchaseRepository; add exception handling for PurchaseNotFoundException